kubernetes-endpoint-security/evidence/metadata-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"restrict-sensitive-egress","namespace":"endpoint-security"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"ipBlock":{"cidr":"10.43.0.10/32"}}]},{"to":[{"ipBlock":{"cidr":"0.0.0.0/0","except":["169.254.0.0/16"]}}]}],"podSelector":{},"policyTypes":["Egress"]}}
  creationTimestamp: "2026-10-09T14:17:59Z"
  generation: 1
  name: restrict-sensitive-egress
  namespace: endpoint-security
  resourceVersion: "515"
  uid: 53005b6b-a9eb-4044-aacc-5c1ab06d8d58
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - ipBlock:
        cidr: 10.43.0.10/32
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.0.0/16
  podSelector: {}
  policyTypes:
  - Egress
